--- a/ledstripcontrol.css
+++ b/ledstripcontrol.css
@@ -1,6 +1,69 @@
-.ledStripControlRootWrapper .module-content{
+.lsc-rootWrapper{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     font-size: 0px;
+    width: 700px;
+    justify-content: center;
+}
+
+.lsc-output.lsc-icon{
+    padding: 5px;
+}
+
+.lsc-color-header {
+    font-size: 20px;
+}
+
+.lsc-totalColorWrapper{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.lsc-colorOuterWrapper{
+    display: flex;
+    flex-direction: row;
+}
+
+.lsc-colorInnerWrapper {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.lsc-colorIndicator {
+    border-radius: 5px;
+    min-height: 20px;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.lsc-icon, .lsc-value {
+    min-width: 65px;
+    font-size: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.lsc-selected {
+    border : 5px solid red;
+    border-radius: 5px;
+}
+
+.lsc-unselected {
+    border : 5px solid black;
+    border-radius: 5px;
+}
+
+.lsc-outputWrapper {
+    width: 100%;
+}
+
+.lsc-output-on {
+    color: rgb(228, 214, 19);
+}
+
+.lsc-output-off {
+    color: rgb(99, 95, 48);
 }
