--- a/ledstripcontrol.css
+++ b/ledstripcontrol.css
@@ -12,6 +12,10 @@
     padding: 5px;
 }
 
+.lsc-hdwbtn.lsc-icon{
+    padding: 5px;
+}
+
 .lsc-color-header, .lsc-options-header {
     font-size: 20px;
 }
